# hfst-ospell

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  NEWS  README  ZHfstOspeller.cc  ZHfstOspeller.h  ZHfstOspellerXmlMetadata.cc  ZHfstOspellerXmlMetadata.h  acceptor.default.txt  analyse-spell.sh  bad-errormodel.sh  basic-edit1.sh  basic-legacy.sh  basic-legacy.sh.in  basic-zhfst-fallback.sh  basic-zhfst.sh  basic-zhfst.sh.in  configure.ac  empty-descriptions.sh  empty-locale.sh  empty-titles.sh  empty-zhfst.sh  empty_descriptions.xml  empty_locale.xml  empty_titles.xml  errmodel.default.txt  hfst-ol.cc  hfst-ol.h  hfst-ospell-office.1  hfst-ospell.1  hfstospell.pc.in  index.xml  main-cicling.cc  main-fsmnlp-2012.cc  main-ispell.cc  (+14 more)
doc/: index.html
test/: editdist.py  french-symbols.txt  french.hfst  french.hfst.ol  test.hfst.ol  test.txt  test2.hfst.ol  test2.txt
tests/: analyse-spell.sh  analyser.default.txt  bad-errormodel.sh  bad_errormodel.zhfst  basic-edit1.sh  basic-zhfst.sh  empty-descriptions.sh  empty-locale.sh  empty-titles.sh  empty-zhfst.sh  empty_descriptions.zhfst  empty_locale.zhfst  empty_titles.zhfst  errmodel.edit1.txt  errmodel.extrachars.txt  no-errormodel.sh  no_errmodel.xml  no_errormodel.zhfst  speller_analyser.zhfst  speller_basic.zhfst  speller_edit1.zhfst  trailing-spaces.sh  trailing_spaces.xml  trailing_spaces.zhfst
